# test-mac-project

./: FLOW.md  README.md  dev.ipynb  prompt_manager.py  prompt_node.py  prompt_template.py  prompts.yaml  pyproject.toml  test_pocket_flow.py
.amazonq/rules/: pocketflow.md
package/: bedrock.py
